build/log/idf_py_stdout_output_46991
[1/11] Linking C static library esp-idf/mCamera-esp32/libmCamera-esp32.a
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/bootloader/esp-idf/esptool_py && /home/afzal-khan/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/afzal-khan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x10000 bootloader 0x1000 /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/bootloader/bootloader.bin
Bootloader binary size 0x6e20 bytes. 0x81e0 bytes (54%) free.
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj 
/home/afzal-khan/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/config -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main -I/home/afzal-khan/esp/esp-idf/components/newlib/platform_include -I/home/afzal-khan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/afzal-khan/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/afzal-khan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/afzal-khan/esp/esp-idf/components/freertos/esp_additions/include -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/afzal-khan/esp/esp-idf/components/heap/include -I/home/afzal-khan/esp/esp-idf/components/log/include -I/home/afzal-khan/esp/esp-idf/components/soc/include -I/home/afzal-khan/esp/esp-idf/components/soc/esp32/. -I/home/afzal-khan/esp/esp-idf/components/soc/esp32/include -I/home/afzal-khan/esp/esp-idf/components/hal/esp32/include -I/home/afzal-khan/esp/esp-idf/components/hal/include -I/home/afzal-khan/esp/esp-idf/components/hal/platform_port/include -I/home/afzal-khan/esp/esp-idf/components/esp_rom/include -I/home/afzal-khan/esp/esp-idf/components/esp_rom/include/esp32 -I/home/afzal-khan/esp/esp-idf/components/esp_rom/esp32 -I/home/afzal-khan/esp/esp-idf/components/esp_common/include -I/home/afzal-khan/esp/esp-idf/components/esp_system/include -I/home/afzal-khan/esp/esp-idf/components/esp_system/port/soc -I/home/afzal-khan/esp/esp-idf/components/esp_system/port/include/private -I/home/afzal-khan/esp/esp-idf/components/xtensa/include -I/home/afzal-khan/esp/esp-idf/components/xtensa/esp32/include -I/home/afzal-khan/esp/esp-idf/components/lwip/include -I/home/afzal-khan/esp/esp-idf/components/lwip/include/apps -I/home/afzal-khan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/afzal-khan/esp/esp-idf/components/lwip/lwip/src/include -I/home/afzal-khan/esp/esp-idf/components/lwip/port/esp32/include -I/home/afzal-khan/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/afzal-khan/esp/esp-idf/components/esp_http_server/include -I/home/afzal-khan/esp/esp-idf/components/esp_event/include -I/home/afzal-khan/esp/esp-idf/components/http_parser -I/home/afzal-khan/esp/esp-idf/components/esp-tls -I/home/afzal-khan/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/afzal-khan/esp/esp-idf/components/mbedtls/port/include -I/home/afzal-khan/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/afzal-khan/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/afzal-khan/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/afzal-khan/esp/esp-idf/components/esp_wifi/include -I/home/afzal-khan/esp/esp-idf/components/esp_phy/include -I/home/afzal-khan/esp/esp-idf/components/esp_phy/esp32/include -I/home/afzal-khan/esp/esp-idf/components/esp_netif/include -I/home/afzal-khan/esp/esp-idf/components/esp_timer/include -I/home/afzal-khan/esp/esp-idf/components/spi_flash/include -I/home/afzal-khan/esp/esp-idf/components/esp_psram/include -I/home/afzal-khan/esp/esp-idf/components/nvs_flash/include -I/home/afzal-khan/esp/esp-idf/components/esp_partition/include -I/home/afzal-khan/esp/esp-idf/components/esp32-camera/driver/include -I/home/afzal-khan/esp/esp-idf/components/esp32-camera/conversions/include -I/home/afzal-khan/esp/esp-idf/components/driver/include -I/home/afzal-khan/esp/esp-idf/components/driver/deprecated -I/home/afzal-khan/esp/esp-idf/components/driver/esp32/include -I/home/afzal-khan/esp/esp-idf/components/esp_pm/include -I/home/afzal-khan/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fmacro-prefix-map=/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton=. -fmacro-prefix-map=/home/afzal-khan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.4\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj -c /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c: In function 'tcp_server_task':
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:280:83: warning: passing argument 3 of 'accept' from incompatible pointer type [-Wincompatible-pointer-types]
  280 |                 client_socket = accept(socket_id, (struct sockaddr *)&sourceAddr, &addrLen);
      |                                                                                   ^~~~~~~~
      |                                                                                   |
      |                                                                                   uint * {aka unsigned int *}
In file included from /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:37:
/home/afzal-khan/esp/esp-idf/components/lwip/include/lwip/sockets.h:15:65: note: expected 'socklen_t *' {aka 'long unsigned int *'} but argument is of type 'uint *' {aka 'unsigned int *'}
   15 | static inline int accept(int s,struct sockaddr *addr,socklen_t *addrlen)
      |                                                      ~~~~~~~~~~~^~~~~~~
At top level:
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:73:13: warning: 'MAC_char' defined but not used [-Wunused-variable]
   73 | static char MAC_char[18];               //Display MAC characters
      |             ^~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:72:16: warning: 'MAC_array' defined but not used [-Wunused-variable]
   72 | static uint8_t MAC_array[6];    //Initialise MAC address
      |                ^~~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:71:12: warning: 's_retry_num' defined but not used [-Wunused-variable]
   71 | static int s_retry_num = 0;             //Initialise current retry to 0
      |            ^~~~~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:68:20: warning: 'TAG_AP' defined but not used [-Wunused-variable]
   68 | static const char *TAG_AP = "wifi softAP";
      |                    ^~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:67:20: warning: 'TAG_STA' defined but not used [-Wunused-variable]
   67 | static const char *TAG_STA = "wifi station";
      |                    ^~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:63:27: warning: 'wifi_event_group' defined but not used [-Wunused-variable]
   63 | static EventGroupHandle_t wifi_event_group;
      |                           ^~~~~~~~~~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c: In function 'tcp_server_task':
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:314:21: error: '__builtin_memset' writing 32 bytes into a region of size 18 overflows the destination [-Werror=stringop-overflow=]
  314 |                     bzero(tx_buff, sizeof(rx_buffer));
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:234:10: note: destination object 'tx_buff' of size 18
  234 |     char tx_buff[] = "hello from server" ;
      |          ^~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
